--- a/Accs/build.gradle
+++ b/Accs/build.gradle
@@ -12,6 +12,11 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.+'
 }
 
+dependencies {
+    compileOnly 'org.projectlombok:lombok:1.18.8'
+    annotationProcessor 'org.projectlombok:lombok:1.18.8'
+}
+
 run {
 	standardInput = System.in	
 }
