--- a/Accs/build.gradle
+++ b/Accs/build.gradle
@@ -17,6 +17,11 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok:1.18.8'
 }
 
+dependencies {
+    compile 'mysql:mysql-connector-java:8.0.17'
+    implementation 'org.hibernate:hibernate-core:5.4.3.Final'
+}
+
 run {
 	standardInput = System.in	
 }
