--- a/Spring_Rest/build.gradle
+++ b/Spring_Rest/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     compileOnly 'org.projectlombok:lombok:1.18.8'
     annotationProcessor 'org.projectlombok:lombok:1.18.8'
     testCompile'org.springframework.boot:spring-boot-starter-test'
+    compile'org.springframework.boot:spring-boot-starter-thymeleaf'
 }
 
 
