--- a/Spring_Rest/build.gradle
+++ b/Spring_Rest/build.gradle
@@ -32,7 +32,9 @@ dependencies {
     compile 'org.springframework.boot:spring-boot-starter-data-jpa'
     compile'org.springframework.boot:spring-boot-starter-web'
     compileOnly 'org.projectlombok:lombok:1.18.8'
+    testCompile 'org.projectlombok:lombok:1.18.8'
     annotationProcessor 'org.projectlombok:lombok:1.18.8'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.8'
     testCompile'org.springframework.boot:spring-boot-starter-test'
     compile'org.springframework.boot:spring-boot-starter-thymeleaf'
 }
