--- a/WebServer/build.gradle
+++ b/WebServer/build.gradle
@@ -1,6 +1,32 @@
+buildscript {
+	repositories {
+		maven {
+			url "https://plugins.gradle.org/m2/"
+		}
+	}
+	dependencies {
+		classpath "gradle.plugin.com.github.spotbugs:spotbugs-gradle-plugin:2.0.0"
+	}
+}
+
+apply plugin: "com.github.spotbugs"
 apply plugin: "java"
 apply plugin: "application"
 mainClassName  = "ru.eltex.Main"
+
+repositories {
+	maven {
+		url "https://plugins.gradle.org/m2/"
+	}
+}
+
 run {
-	standardInput = System.in	
+	standardInput = System.in
+}
+
+tasks.withType(com.github.spotbugs.SpotBugsTask) {
+	reports {
+		xml.enabled = false
+		html.enabled = true
+	}
 }
